# dunwoody_tools

./: CLAUDE.md  LICENSE  README.md  lifting_lug_check.py  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: deploy.yml
apps/: de-calculator-template.html  lifting-lug-check.html  lifting_lug_check.py
apps/static/: calculator.css  theme.css
scripts/: build.py
